--- a/favorites.html
+++ b/favorites.html
@@ -97,6 +97,11 @@ background: linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%);
 			margin-top: 0.5rem;
 		}
 
+		body.dark em {
+  color: #ddd;
+  font-style: italic;
+  text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.1);
+}
 		body.dark {
 			background: #121212;
 			color: white;
