--- a/favorites.html
+++ b/favorites.html
@@ -165,7 +165,7 @@ window.collection = collection;
 window.doc = doc;
 window.setDoc = setDoc;
 window.deleteDoc = deleteDoc;
-window.goHome = () => window.location.href = "index.html";
+window.goHome = () => window.location.href = "home.html";
 window.logout = async () => {
   try {
     await signOut(auth);
