--- a/index.html
+++ b/index.html
@@ -3,344 +3,137 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Login - Enchanted Checklist</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>The Enchanted Checklist</title>
   <style>
-  body {
-    margin: 0;
-    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, sans-serif;
-    background: linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-    padding: 2rem;
-    min-height: 100vh;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-  }
-
-  body.dark {
-    background: #121212;
-    color: white;
-  }
-
-  .main-container {
-    width: 95%;
-    max-width: 700px;
-    margin: 0 auto;
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  h1 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-
-  input, button {
-    margin: 0.5rem 0;
-    padding: 0.6rem;
-    border: none;
-    border-radius: 8px;
-    font-size: 1rem;
-  }
-
-  input {
-    width: 100%;
-    max-width: 300px;
-  }
-
-  button {
-    background-color: white;
-    color: #2f77a7;
-    cursor: pointer;
-    font-weight: bold;
-    width: 100%;
-    max-width: 300px;
-  }
-
-  /* 📊 Progress Rings Container */
-#progress-rings-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  max-width: 700px;
-  margin: 2rem auto;
-}
-
-#progress-rings-container svg {
-  width: 280px;
-  height: 280px;
-}
-
-
-  #progress-rings circle {
-    filter: url(#glow);
-    transition: stroke-dashoffset 1.5s ease-out;
-  }
-
-  /* 📝 Ring Labels Positioned Right of SVG */
-.ring-labels {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 1rem;
-  font-size: 0.9rem;
-  text-align: left;
+body {
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%);
+  margin: 0;
   color: white;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+  min-height: 100vh;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 2rem 1rem 3rem 1rem; /* bottom padding for video space */
+  box-sizing: border-box;
 }
 
-.ring-labels div {
-  display: flex;
-  align-items: center;
-  gap: 0.4rem;
-
-
-  /* ✨ Pulse animation when rings update */
-  @keyframes pulse {
-    0% { transform: scale(1); opacity: 1; }
-    50% { transform: scale(1.05); opacity: 0.75; }
-    100% { transform: scale(1); opacity: 1; }
-  }
-
-  .pulse-once {
-    animation: pulse 1.2s ease-out;
-  }
-</style>
+    input, button {
+      font-size: 1rem;
+      padding: 0.75rem;
+      margin: 0.5rem;
+      border: none;
+      border-radius: 8px;
+      width: 80%;
+      max-width: 300px;
+    }
+    button {
+      background: white;
+      color: #2f77a7;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    h1 {
+      margin-bottom: 1rem;
+    }
+  </style>
 </head>
+<body>
+  <div style="max-width: 500px; margin: 0 auto; padding: 2rem; text-align: center;">
+    <h1>The Enchanted Checklist</h1>
 
-<body style="display: none;">
-  <div class="main-container" id="mainContent" style="display: none;">
-    <h1>
-      <i class="fas fa-wand-magic-sparkles" style="margin-right: 0.5rem;"></i>
-      The Enchanted Checklist
-    </h1>
+    <input type="email" id="email" placeholder="Email" autocomplete="email" />
+    <input type="password" id="password" placeholder="Password" autocomplete="current-password" />
 
-    <!-- 🏠 Landing -->
-    <div id="landingPage" style="display: none; text-align: center;">
-      <h2>Your Ultimate Guide to Completing Disney!</h2>
-      <p>
-        Whether you're visiting the parks for the 1st time or the 50th, there's always something magical left to discover.
-        Use this guide to track progress across all that Disney has to offer.
+    <div style="display: flex; flex-direction: column; align-items: center; gap: 0.5rem; margin-top: 1rem;">
+      <button id="loginBtn" onclick="login()">Login</button>
+      <button id="registerBtn" onclick="register()">Register</button>
+      <!-- <button onclick="window.location.href='create.html'">Create Account</button> -->
+    </div>
+
+    <!-- 🎥 Preview Video -->
+    <div style="margin-top: 2.5rem; width: 100%;">
+      <h3 style="margin-bottom: 0.5rem;">✨ What’s Inside</h3>
+      <p style="font-size: 0.95rem; margin-bottom: 1rem;">
+        Get a sneak peek at how The Enchanted Checklist works!
       </p>
-
-      <div style="margin-top: 1rem; display: flex; flex-direction: column; align-items: center; gap: 1rem;">
-        <button onclick="loadExperiences()">
-          <i class="fas fa-map-marked-alt" style="margin-right: 0.5rem;"></i>
-          Your Experiences
-        </button>
-        <button onclick="window.location.href='preferences.html'">
-          <i class="fas fa-cog" style="margin-right: 0.5rem;"></i>
-          Preferences
-        </button>
-        <button onclick="openFavorites()">
-          <i class="fas fa-heart" style="margin-right: 0.5rem;"></i>
-          For The Next Trip
-        </button>
-        <small style="display:block; margin-top:-0.25rem; margin-bottom:-0.25rem; color:white; opacity:0.8;" aria-live="polite">
-          (Empty for now? Tasks you save will appear here.)
-        </small>
-        <button onclick="logout()">
-          <i class="fas fa-door-open" style="margin-right: 0.5rem;"></i>
-          Logout
-        </button>
+      <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.25);">
+        <iframe
+          src="https://youtu.be/k1Uwe5fObYM?si=9P8gWC7TkfSbAELD"
+          title="Enchanted Checklist Preview"
+          frameborder="0"
+          allowfullscreen
+          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 12px;">
+        </iframe>
       </div>
-
-      <!-- 📊 RINGS + LABELS LAYOUT -->
-<div id="progress-rings-container">
-  <svg viewBox="0 0 280 280">
-    <defs>
-      <filter id="glow">
-        <feDropShadow dx="0" dy="0" stdDeviation="3" flood-color="#000000" flood-opacity="0.25" />
-      </filter>
-    </defs>
-
-    <!-- Outer orbit: Total -->
-    <circle cx="140" cy="140" r="115" stroke="#deb6ee" stroke-width="10" fill="none" opacity="0.2" />
-    <circle id="ring-total" cx="140" cy="140" r="115" stroke="#deb6ee" stroke-width="10" fill="none"
-      stroke-linecap="round" transform="rotate(-90 140 140)" stroke-dasharray="722.6" stroke-dashoffset="722.6"
-      filter="url(#glow)" />
-
-    <!-- WDW -->
-    <circle cx="140" cy="140" r="90" stroke="#dc81ff" stroke-width="10" fill="none" opacity="0.2" />
-    <circle id="ring-wdw" cx="140" cy="140" r="90" stroke="#dc81ff" stroke-width="10" fill="none"
-      stroke-linecap="round" transform="rotate(-90 140 140)" stroke-dasharray="565.5" stroke-dashoffset="565.5"
-      filter="url(#glow)" />
-
-    <!-- DLR -->
-    <circle cx="140" cy="140" r="60" stroke="#c075e4" stroke-width="10" fill="none" opacity="0.2" />
-    <circle id="ring-dl" cx="140" cy="140" r="60" stroke="#c075e4" stroke-width="10" fill="none"
-      stroke-linecap="round" transform="rotate(-90 140 140)" stroke-dasharray="376.9" stroke-dashoffset="376.9"
-      filter="url(#glow)" />
-
-    <!-- DCL -->
-    <circle cx="140" cy="140" r="35" stroke="#89cff0" stroke-width="10" fill="none" opacity="0.2" />
-    <circle id="ring-dcl" cx="140" cy="140" r="35" stroke="#89cff0" stroke-width="10" fill="none"
-      stroke-linecap="round" transform="rotate(-90 140 140)" stroke-dasharray="219.9" stroke-dashoffset="219.9"
-      filter="url(#glow)" />
-  </svg>
-
-  <!-- Side Labels -->
-  <div class="ring-labels">
-    <div id="percent-total"><i class="fas fa-bullseye"></i> Total: --%</div>
-    <div id="percent-wdw"><i class="fas fa-landmark-dome"></i> WDW: --%</div>
-    <div id="percent-dl"><i class="fas fa-bridge"></i> DLR: --%</div>
-    <div id="percent-dcl"><i class="fas fa-anchor"></i> DCL: --%</div>
+    </div>
   </div>
-</div>
+</body>
 
-  <!-- 🔧 App logic -->
   <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
-  import {
-    getAuth,
-    onAuthStateChanged,
-    signOut
-  } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js";
-  import {
-    getFirestore,
-    getDoc,
-    getDocs,
-    doc,
-    collection
-  } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+    import {
+      getAuth,
+      signInWithEmailAndPassword,
+      createUserWithEmailAndPassword,
+      onAuthStateChanged
+    } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js";
 
-  // 🔥 Initialize Firebase
-  const firebaseConfig = {
-    apiKey: "AIzaSyDLDycGnK6Nm8m5KqbhhPSKz7GNb3PjZCo",
-    authDomain: "the-enchanted-checklist.firebaseapp.com",
-    projectId: "the-enchanted-checklist",
-    storageBucket: "the-enchanted-checklist.appspot.com",
-    messagingSenderId: "971177969419",
-    appId: "1:971177969419:web:3a48e119cb866f6551840e"
-  };
+    const firebaseConfig = {
+      apiKey: "AIzaSyDLDycGnK6Nm8m5KqbhhPSKz7GNb3PjZCo",
+      authDomain: "the-enchanted-checklist.firebaseapp.com",
+      projectId: "the-enchanted-checklist",
+      storageBucket: "the-enchanted-checklist.appspot.com",
+      messagingSenderId: "971177969419",
+      appId: "1:971177969419:web:3a48e119cb866f6551840e"
+    };
 
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-  const db = getFirestore(app);
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-  // 🧭 Navigation functions
-  window.loadExperiences = function () {
-    window.location.href = "checklist.html";
-  };
-
-  window.openFavorites = function () {
-    window.location.href = "favorites.html";
-  };
-
-  window.openPreferences = function () {
-    window.location.href = "preferences.html";
-  };
-
-  window.logout = async function () {
-    try {
-      await signOut(auth);
-      window.location.href = "login.html";
-    } catch (err) {
-      alert("Logout failed: " + err.message);
+    async function setLoadingState(isLoading) {
+      document.getElementById("loginBtn").disabled = isLoading;
+      document.getElementById("registerBtn").disabled = isLoading;
     }
-  };
 
-  async function updateGlobalProgress() {
-    const user = auth.currentUser;
-    if (!user) return;
+    window.login = async function () {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      setLoadingState(true);
+      try {
+        await signInWithEmailAndPassword(auth, email, password);
+        // Let onAuthStateChanged handle redirect
+      } catch (err) {
+        if (err.code === 'auth/invalid-credential') {
+          alert("Invalid email or password.");
+        } else {
+          alert("Login failed: " + err.message);
+        }
+      }
+      setLoadingState(false);
+    };
 
-    const uid = user.uid;
+    window.register = async function () {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      setLoadingState(true);
+      try {
+        await createUserWithEmailAndPassword(auth, email, password);
+        // Let onAuthStateChanged handle redirect
+      } catch (err) {
+        alert("Registration failed: " + err.message);
+      }
+      setLoadingState(false);
+    };
 
-    const [checklistRes, progressSnap, prefsSnap] = await Promise.all([
-      fetch("checklist.json").then(res => res.json()),
-      getDocs(collection(db, `users/${uid}/progress`)),
-      getDoc(doc(db, `users/${uid}/preferences/default`))
-    ]);
-
-    const progressMap = {};
-    progressSnap.forEach(doc => {
-      progressMap[doc.id] = doc.data().complete === true;
-    });
-
-    const prefs = prefsSnap.exists() ? prefsSnap.data() : {};
-    const wdwParks = ["Magic Kingdom", "EPCOT", "Animal Kingdom", "Hollywood Studios", "Park Hopper Plus", "Disney Springs", "Walt Disney World Resorts"];
-    const dlrParks = ["Disneyland Park", "Disney California Adventure", "Downtown Disney District", "Disneyland Resorts", "Seasonal Events and Festivals", "Bonus"];
-
-    const wdwFilters = Object.fromEntries(wdwParks.map(p => [p, prefs[`include_${p}`] !== false]));
-    const dlrFilters = Object.fromEntries(dlrParks.map(p => [p, prefs[`include_${p}`] !== false]));
-    const dclFilter = prefs["include_Disney Cruise Line"] !== false;
-
-    const filtered = checklistRes.filter(task => {
-      if (task.Experience === "Walt Disney World") return wdwFilters[task.Park];
-      if (task.Experience === "Disneyland") return dlrFilters[task.Park];
-      if (task.Experience === "Disney Cruise Line") return dclFilter;
-      return false;
-    });
-
-    const wdw = filtered.filter(t => t.Experience === "Walt Disney World");
-    const dl = filtered.filter(t => t.Experience === "Disneyland");
-    const dcl = filtered.filter(t => t.Experience === "Disney Cruise Line");
-
-    let totalComplete = 0, wdwComplete = 0, dlComplete = 0, dclComplete = 0;
-
-    filtered.forEach(task => {
-      const taskId = task.id || `${task.Park}-${task.Area}-${task.Task}`;
-      if (progressMap[taskId]) {
-        totalComplete++;
-        if (task.Experience === "Walt Disney World") wdwComplete++;
-        if (task.Experience === "Disneyland") dlComplete++;
-        if (task.Experience === "Disney Cruise Line") dclComplete++;
+    onAuthStateChanged(auth, user => {
+      if (user) {
+        window.location.href = "home.html";
       }
     });
-
-    const totalPercent = totalComplete / filtered.length || 0;
-    const wdwPercent = wdwComplete / wdw.length || 0;
-    const dlPercent = dlComplete / dl.length || 0;
-    const dclPercent = dclComplete / dcl.length || 0;
-
-    document.getElementById("ring-total").style.strokeDashoffset = 722.6 * (1 - totalPercent);
-    document.getElementById("ring-wdw").style.strokeDashoffset = 565.5 * (1 - wdwPercent);
-    document.getElementById("ring-dl").style.strokeDashoffset = 376.9 * (1 - dlPercent);
-    document.getElementById("ring-dcl").style.strokeDashoffset = 219.9 * (1 - dclPercent);
-
-    document.getElementById("percent-total").innerHTML = `<i class="fas fa-bullseye"></i> Total: ${(totalPercent * 100).toFixed(1)}% — ${totalComplete}/${filtered.length}`;
-    document.getElementById("percent-wdw").innerHTML = `<i class="fas fa-landmark-dome"></i> WDW: ${(wdwPercent * 100).toFixed(1)}% — ${wdwComplete}/${wdw.length}`;
-    document.getElementById("percent-dl").innerHTML = `<i class="fas fa-bridge"></i> DLR: ${(dlPercent * 100).toFixed(1)}% — ${dlComplete}/${dl.length}`;
-    document.getElementById("percent-dcl").innerHTML = `<i class="fas fa-anchor"></i> DCL: ${(dclPercent * 100).toFixed(1)}% — ${dclComplete}/${dcl.length}`;
-  }
-
-function showLandingPage() {
-  const authSection = document.getElementById("authSection");
-if (authSection) authSection.style.display = "none";
-  document.getElementById("landingPage").style.display = "block";
-
-    updateGlobalProgress();
-
-    const rings = document.getElementById("progress-rings-container"); // or "progress-rings"
-  if (rings) {
-    rings.classList.remove("pulse-once");
-    void rings.offsetWidth;
-    rings.classList.add("pulse-once");
-    }
-  }
-
-  // 🔐 Auth logic
-  onAuthStateChanged(auth, async user => {
-    if (user) {
-      // Optional: Load dark mode
-      const prefsSnap = await getDoc(doc(db, `users/${user.uid}/preferences/default`));
-      const prefs = prefsSnap.exists() ? prefsSnap.data() : {};
-      if (prefs.dark_mode === true) {
-        document.body.classList.add("dark");
-      }
-
-      document.body.style.display = "block";
-      document.getElementById("mainContent").style.display = "block";
-      showLandingPage();
-    } else {
-      window.location.href = "login.html";
-    }
-  });
-</script>
+  </script>
 </body>
 </html>
