--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Put this in the <head> section of index.html -->
+<meta property="og:title" content="The Enchanted Checklist" />
+<meta property="og:description" content="Your ultimate guide to completing Disney! Track progress, plan your trip, and unlock magic." />
+<meta property="og:image" content="https://enchantedchecklist.com/assets/preview.jpg" />
+<meta property="og:url" content="https://enchantedchecklist.com" />
+<meta property="og:type" content="website" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="The Enchanted Checklist" />
+<meta name="twitter:description" content="Complete every Disney experience with this magical checklist." />
+<meta name="twitter:image" content="https://enchantedchecklist.com/assets/preview.jpg" />
   <title>Login - Enchanted Checklist</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
