--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body {
       </p>
       <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.25);">
         <iframe
-          src="https://youtu.be/k1Uwe5fObYM?si=9P8gWC7TkfSbAELD"
+          src="https://youtu.be/k1Uwe5fObYM?si=zL3Oeae-eazi2UZL"
           title="Enchanted Checklist Preview"
           frameborder="0"
           allowfullscreen
