--- a/home.html
+++ b/home.html
@@ -215,12 +215,12 @@ circle.animated-ring {
           </p>
           <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.25);">
             <iframe
-              src="https://youtu.be/k1Uwe5fObYM?si=zL3Oeae-eazi2UZL"
-              title="How to Use The Enchanted Checklist"
-              frameborder="0"
-              allowfullscreen
-              style="position: absolute; top:0; left:0; width:100%; height:100%; border-radius: 12px;">
-            </iframe>
+  src="https://www.youtube.com/embed/k1Uwe5fObYM"
+  title="How to Use The Enchanted Checklist"
+  frameborder="0"
+  allowfullscreen
+  style="position: absolute; top:0; left:0; width:100%; height:100%; border-radius: 12px;">
+</iframe>
           </div>
         </div>
       </div>
