--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@ body {
         Get a sneak peek at how The Enchanted Checklist works!
       </p>
       <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.25);">
-        <iframe
-          src="https://youtu.be/k1Uwe5fObYM?si=zL3Oeae-eazi2UZL"
-          title="Enchanted Checklist Preview"
-          frameborder="0"
-          allowfullscreen
-          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border-radius: 12px;">
-        </iframe>
+      <iframe
+  src="https://www.youtube.com/embed/k1Uwe5fObYM"
+  title="How to Use The Enchanted Checklist"
+  frameborder="0"
+  allowfullscreen
+  style="position: absolute; top:0; left:0; width:100%; height:100%; border-radius: 12px;">
+</iframe>
       </div>
     </div>
   </div>
