--- a/checklist.html
+++ b/checklist.html
@@ -6,16 +6,19 @@
 	<title>The Enchanted Checklist</title>
 	<style>
 		body {
-			margin: 0;
-			font-family: 'Poppins', -apple-system, BlinkMacSystemFont, sans-serif;
-			background: linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%);
-			background-attachment: fixed;
-			background-repeat: no-repeat;
-			background-size: cover;
-			color: white;
-			padding: 2rem;
-			min-height: 100vh;
-			text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+			 margin: 0;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, sans-serif;
+background:
+  linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%),
+  url('Mural.PNG') no-repeat center top;
+  background-size: contain, cover;
+  background-attachment: fixed, fixed;
+  background-repeat: no-repeat, no-repeat;
+  color: white;
+  padding: 2rem;
+  min-height: 100vh;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  overflow-x: hidden;
 			/* 👈 soft black shadow */
 		}
 		/* 📱 Responsive container for all content */
@@ -218,6 +221,26 @@
 			color: #444;
 			text-shadow: none;
 		}
+		
+		  body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('Mural.PNG') no-repeat center top;
+    background-size: contain;
+    opacity: 0.2;
+    pointer-events: none;
+    z-index: 0;
+  }
+
+  body > * {
+    position: relative;
+    z-index: 1;
+  }
+  
 	</style>
 
 </head>
