--- a/home.html
+++ b/home.html
@@ -7,18 +7,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>The Enchanted Checklist</title>
   <style>
-  body {
-    margin: 0;
-    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, sans-serif;
-    background: linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-    padding: 2rem;
-    min-height: 100vh;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-  }
+body {
+  margin: 0;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, sans-serif;
+background:
+  linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%),
+  url('Mural.PNG') no-repeat center top;
+  background-size: contain, cover;
+  background-attachment: fixed, fixed;
+  background-repeat: no-repeat, no-repeat;
+  color: white;
+  padding: 2rem;
+  min-height: 100vh;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  overflow-x: hidden;
+}
 
   body.dark {
     background: #121212;
@@ -113,6 +116,24 @@
 circle.animated-ring {
   transition: stroke-dashoffset 1.2s ease-out;
 }
+  body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('Mural.PNG') no-repeat center top;
+    background-size: contain;
+    opacity: 0.2;
+    pointer-events: none;
+    z-index: 0;
+  }
+
+  body > * {
+    position: relative;
+    z-index: 1;
+  }
 
 </style>
 </head>
