--- a/index.html
+++ b/index.html
@@ -3,34 +3,36 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- Put this in the <head> section of index.html -->
-<meta property="og:title" content="The Enchanted Checklist" />
-<meta property="og:description" content="Your ultimate guide to completing Disney! Track progress, plan your trip, and unlock magic." />
-<meta property="og:image" content="https://enchantedchecklist.com/assets/preview.jpg" />
-<meta property="og:url" content="https://enchantedchecklist.com" />
-<meta property="og:type" content="website" />
-
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="The Enchanted Checklist" />
-<meta name="twitter:description" content="Complete every Disney experience with this magical checklist." />
-<meta name="twitter:image" content="https://enchantedchecklist.com/assets/preview.jpg" />
   <title>Login - Enchanted Checklist</title>
+
+  <!-- Social metadata -->
+  <meta property="og:title" content="The Enchanted Checklist" />
+  <meta property="og:description" content="Your ultimate guide to completing Disney! Track progress, plan your trip, and unlock magic." />
+  <meta property="og:image" content="https://enchantedchecklist.com/assets/preview.jpg" />
+  <meta property="og:url" content="https://enchantedchecklist.com" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="The Enchanted Checklist" />
+  <meta name="twitter:description" content="Complete every Disney experience with this magical checklist." />
+  <meta name="twitter:image" content="https://enchantedchecklist.com/assets/preview.jpg" />
+
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
   <style>
-body {
-  font-family: 'Poppins', sans-serif;
-  background: linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%);
-  margin: 0;
-  color: white;
-  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
-  min-height: 100vh;
-  overflow-x: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 2rem 1rem 3rem 1rem; /* bottom padding for video space */
-  box-sizing: border-box;
-}
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%);
+      margin: 0;
+      color: white;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+      min-height: 100vh;
+      overflow-x: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 2rem 1rem 3rem 1rem;
+      box-sizing: border-box;
+    }
 
     input, button {
       font-size: 1rem;
@@ -41,29 +43,40 @@ body {
       width: 80%;
       max-width: 300px;
     }
+
     button {
       background: white;
       color: #2f77a7;
       font-weight: bold;
       cursor: pointer;
     }
+
     h1 {
       margin-bottom: 1rem;
     }
+
+    .container {
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 2rem;
+      text-align: center;
+      width: 100%;
+    }
   </style>
 </head>
+
 <body>
-  <div style="max-width: 500px; margin: 0 auto; padding: 2rem; text-align: center;">
+  <div class="container">
     <h1>The Enchanted Checklist</h1>
 
+    <!-- Login Section -->
     <input type="email" id="email" placeholder="Email" autocomplete="email" />
     <input type="password" id="password" placeholder="Password" autocomplete="current-password" />
 
     <div style="display: flex; flex-direction: column; align-items: center; gap: 0.5rem; margin-top: 1rem;">
       <button id="loginBtn" onclick="login()">Login</button>
-      <button id="registerBtn" onclick="register()">Register</button>
-	  <button id="resetPasswordBtn" type="button">Forgot Password?</button>
-      <!-- <button onclick="window.location.href='create.html'">Create Account</button> -->
+      <button id="resetPasswordBtn" type="button">Forgot Password?</button>
+      <button onclick="redirectToStripe()">Purchase Access</button>
     </div>
 
     <!-- 🎥 Preview Video -->
@@ -73,26 +86,24 @@ body {
         Get a sneak peek at how The Enchanted Checklist works!
       </p>
       <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.25);">
-      <iframe
-  src="https://www.youtube.com/embed/k1Uwe5fObYM"
-  title="How to Use The Enchanted Checklist"
-  frameborder="0"
-  allowfullscreen
-  style="position: absolute; top:0; left:0; width:100%; height:100%; border-radius: 12px;">
-</iframe>
+        <iframe
+          src="https://www.youtube.com/embed/k1Uwe5fObYM"
+          title="How to Use The Enchanted Checklist"
+          frameborder="0"
+          allowfullscreen
+          style="position: absolute; top:0; left:0; width:100%; height:100%; border-radius: 12px;">
+        </iframe>
       </div>
     </div>
   </div>
-</body>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
     import {
       getAuth,
       signInWithEmailAndPassword,
-      createUserWithEmailAndPassword,
       onAuthStateChanged,
-	  sendPasswordResetEmail
+      sendPasswordResetEmail
     } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js";
 
     const firebaseConfig = {
@@ -109,7 +120,6 @@ body {
 
     async function setLoadingState(isLoading) {
       document.getElementById("loginBtn").disabled = isLoading;
-      document.getElementById("registerBtn").disabled = isLoading;
     }
 
     window.login = async function () {
@@ -118,53 +128,46 @@ body {
       setLoadingState(true);
       try {
         await signInWithEmailAndPassword(auth, email, password);
-        // Let onAuthStateChanged handle redirect
+        // Redirect handled below
       } catch (err) {
-        if (err.code === 'auth/invalid-credential') {
-          alert("Invalid email or password.");
-        } else {
-          alert("Login failed: " + err.message);
-        }
+        alert("Login failed: " + (err.code === 'auth/invalid-credential' ? "Invalid email or password." : err.message));
       }
       setLoadingState(false);
     };
 
-    window.register = async function () {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      setLoadingState(true);
+    window.redirectToStripe = async function () {
       try {
-        await createUserWithEmailAndPassword(auth, email, password);
-        // Let onAuthStateChanged handle redirect
-      } catch (err) {
-        alert("Registration failed: " + err.message);
+        const res = await fetch("https://stripe-server-51y0.onrender.com/create-checkout-session", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" }
+        });
+        const data = await res.json();
+        window.location.href = data.url;
+      } catch (error) {
+        alert("Failed to redirect to Stripe: " + error.message);
       }
-      setLoadingState(false);
     };
 
     onAuthStateChanged(auth, user => {
       if (user) {
         window.location.href = "home.html";
-		
-		
       }
     });
-	
-	document.getElementById("resetPasswordBtn").addEventListener("click", async () => {
-  const email = document.getElementById("email").value;
-  if (!email) {
-    alert("Please enter your email address above before requesting a reset.");
-    return;
-  }
 
-  try {
-    await sendPasswordResetEmail(auth, email);
-    alert("📧 Password reset email sent! Check your inbox.");
-  } catch (error) {
-    console.error("Error sending password reset email:", error);
-    alert("❌ Could not send reset email. Check the address or try again later.");
-  }
-});
+    document.getElementById("resetPasswordBtn").addEventListener("click", async () => {
+      const email = document.getElementById("email").value;
+      if (!email) {
+        alert("Please enter your email address above before requesting a reset.");
+        return;
+      }
+
+      try {
+        await sendPasswordResetEmail(auth, email);
+        alert("📧 Password reset email sent! Check your inbox.");
+      } catch (error) {
+        alert("❌ Could not send reset email. Check the address or try again later.");
+      }
+    });
   </script>
 </body>
 </html>
